added a LOT of stuff, including trying to set up font-awesome.... with limited success so far

--- a/views/index.html
+++ b/views/index.html
@@ -4,13 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume html and css.....</title>
+    <link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
-        <div class="left_side"></div>
-        <div class="right_side"></div>
+        <div class="left_side">
+            <div class="profileText">
+                <div class="imgBx">
+                    <img src="images/headshot_img.jpg">
+                </div>
+                <h2>Ellis Critchlow<br><span>Computer Scientist</span></h2>
+            </div>
+            <div class="contactInfo">
+                <h3 class="title">Contact Info</h3>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
+                        <span class="text">731-592-2630</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
+                        <span class="text">elscritchl@outlook.com</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i></span>
+                        <span class="text">https://www.linkedin.com/in/ellis-critchlow/</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+                        <span class="text">Warner Robins, GA</span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="right_side">
+            <h2>Bro where is the right side...</h2>
+        </div>
     </div>
-    <h1>Hello world</h1>
 </body>
 </html>
