finally got the fonts working... there was some weirdness with sharing the font information, and now we have two copies in the /fonts/ and fonts/..../fonts/ folders

--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume html and css.....</title>
-    <link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css" /> <!--this needs all the .woff and .ttf files that are under the font directory... really need to open up that whole thing for usage...--> 
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
